--- a/app/views/representatives/search.html.haml
+++ b/app/views/representatives/search.html.haml
@@ -8,7 +8,8 @@
                         %tr
                             %th Name
                             %th Office
-                            %th Links
+                            %th News
+                            %th Profile
                     %tbody
                         - @representatives.each_with_index do |rep, _index|
                             %tr
@@ -18,4 +19,8 @@
                                     = link_to representative_news_items_path(rep.id), class: 'btn btn-primary' do
                                         %i.fas.fa-newspaper
                                         News Articles
+                                %td 
+                                    = link_to representative_path(rep), class: 'btn btn-info ml-2' do
+                                        %i.fas.fa-info-circle
+                                        Profile Page
                                 
