changed a few things, tyring to get the show method to find the representative by ocdid but stil no dice

--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -1,3 +1,6 @@
+-# this uses the @representative set in the show model method
+- Rails.logger.info("Representative: #{@representative.inspect}")
+
 .row.mt-2
   .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
     %h3.text-center= #{@representative.name}
