fixed all failing rspec tests, coverage now at 54%

--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -11,10 +11,10 @@
           %dt.col-sm-9= @representative.title
         %dl.row
           %dt.col-sm-3.text-md-right Address:
-          %dt.col-sm-9= @representative.address
+          %dd.col-sm-9= @representative.address
         %dl.row
           %dt.col-sm-3.text-md-right Political Party:
           %dt.col-sm-9= @representative.political_party
         %dl.row
           %dt.col-sm-3.text-md-right Photo:
-          %dt.col-sm-3.text-md-right not found
+          %dt.col-sm-9= "not found"
