--- a/app/views/news_items/index.html.haml
+++ b/app/views/news_items/index.html.haml
@@ -20,6 +20,7 @@
                             %th Description
                             %th Posted
                             %th{ colspan: 3 } Links
+                            %th Issue
                     %tbody
                         - @news_items.each_with_index do |item, index|
                             %tr
@@ -44,3 +45,4 @@
                                     = link_to representative_news_item_path(item.representative.id, item.id),
                                     method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do
                                         %i.fas.fa-trash &nbsp;Delete
+                                %td= item.issue
