--- a/app/views/candidate/search.html.haml
+++ b/app/views/candidate/search.html.haml
@@ -1,10 +1,20 @@
-= form_tag candidates_path, method: :get do
-  %label
-    Election Cycle:
-    = select_tag :cycle, options_for_select(@election_cycles)
-  
-  %label
-    Financial Category:
-    = select_tag :category, options_for_select(@financial_categories)
-  
-  = submit_tag 'Search'
+.container-fluid
+  .row.mt-2
+    .col-md-6.offset-md-3
+      %h1.text-center Top 20 Candidates per Cycle by Category
+
+      %form{ action: candidates_path, method: :get, class: 'mt-3' }
+        .form-row
+          .form-group.col-md-6
+            %label
+              Election Cycle:
+            = select_tag :cycle, options_for_select(@election_cycles), class: 'form-control'
+        
+          .form-group.col-md-6
+            %label
+              Financial Category:
+            = select_tag :category, options_for_select(@financial_categories), class: 'form-control'
+        
+        .form-row
+          .form-group.col-md-12
+            = submit_tag 'Search', class: 'btn btn-primary'
