--- a/app/views/candidate/results.html.haml
+++ b/app/views/candidate/results.html.haml
@@ -1,3 +1,4 @@
+= link_to 'Home', root_path, class: 'btn btn-primary mt-3'
 %h1 Top 20 Candidates in #{@category} Category during #{@cycle}
 
 = link_to 'Back to Candidate Search', candidates_path, class: 'btn btn-primary mt-3'
