--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -1,3 +1,4 @@
+= link_to 'Home', root_path, class: 'btn btn-primary mt-3'
 .row.mt-2
   .col-12.col-md-6.offset-md-3.col-xl-4.offset-xl-4
     %h3.text-center= @representative.name
@@ -18,3 +19,4 @@
         %dl.row
           %dt.col-sm-3.text-md-right Photo:
           %dt.col-sm-9= "not found"
+= link_to 'Back to Representative Search', representatives_path, class: 'btn btn-primary mt-3'
