added back to state button for counties

--- a/app/views/map/county.html.haml
+++ b/app/views/map/county.html.haml
@@ -1,3 +1,5 @@
+= link_to 'Home', root_path, class: 'btn btn-primary mt-3'
+= link_to 'Back to State', state_map_path, class: 'btn btn-primary mt-3'
 .row
     .col-12
         %section.my-4
