fixed some haml-lints but the 4 space indenations still annoying

--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -17,4 +17,4 @@
           %dt.col-sm-9= @representative.political_party
         %dl.row
           %dt.col-sm-3.text-md-right Photo:
-          %dt.col-sm-9= "not found"
+          %dt.col-sm-9= 'not found'
