yeah i tried fixing this 4 space indentation but its giving me some chat

--- a/app/views/candidate/results.html.haml
+++ b/app/views/candidate/results.html.haml
@@ -5,6 +5,6 @@
     %tr
       %th Candidate Name
   %tbody
-    - @candidates.each do |candidate|
+    - @candidates.each do |c|
       %tr
-        %td= candidate
+        %td= c
