lints fixed but we still got the buttons

--- a/app/views/representatives/show.html.haml
+++ b/app/views/representatives/show.html.haml
@@ -18,5 +18,5 @@
           %dt.col-sm-9= @representative.political_party
         %dl.row
           %dt.col-sm-3.text-md-right Photo:
-          %dt.col-sm-9= "not found"
+          %dt.col-sm-9= 'not found'
 = link_to 'Back to Representative Search', representatives_path, class: 'btn btn-primary mt-3'
